crates/carta/tests/snapshots/golden_writer__beamer__math__aligned.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\[\begin{aligned} x^2 + 1 \\ \frac{a}{b} \end{aligned}\]

\[\begin{aligned} a &= b + c \\ d &= e \end{aligned}\]

stack \(\begin{aligned} p \\ q \\ r \end{aligned}\)
\end{frame}
