crates/carta/tests/snapshots/golden_writer__beamer__math__cancel.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\(\cancel{x}\) \(\bcancel{y+z}\) \(\xcancel{abc}\)
\end{frame}
