crates/carta/tests/snapshots/golden_writer__beamer__math__ext-arrows.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\(\xrightarrow{f}\) \(\xleftarrow{g}\) \(\xrightarrow[u]{f}\)
\end{frame}
