crates/carta/tests/snapshots/golden_writer__beamer__math__frac-styles.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\(\frac{a}{b}\) \(\tfrac{a}{b}\) \(\dfrac{a}{b}\)
\end{frame}
