crates/carta/tests/snapshots/golden_writer__beamer__math__math-display.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\[\int_0^1 x \, dx\]
\end{frame}
