crates/carta/tests/snapshots/golden_writer__beamer__math__math-inline.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
an equation \(a^2 + b^2 = c^2\) inline
\end{frame}
