crates/carta/tests/snapshots/golden_writer__beamer__math__matrix-array.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\(\begin{array}{cc}a & b \\ c & d\end{array}\)
\(\begin{array}{ccc}1 & 2 & 3 \\ 4 & 5 & 6\end{array}\)
\end{frame}
