crates/carta/tests/snapshots/golden_writer__beamer__math__modulo.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\(a \pmod{n}\) \(a \mod b\) \(a \bmod b\) \(a \pod{n}\)
\end{frame}
