crates/carta/tests/snapshots/golden_writer__beamer__math__over-under-set.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\(\overset{a}{b}\) \(\underset{a}{b}\) \(\stackrel{\text{def}}{=}\)
\end{frame}
