crates/carta/tests/snapshots/golden_writer__beamer__math__sized-delimiters.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\(\big( x \big)\) \(\Big[ \big\{ y \big\} \Big]\)
\(\bigg\langle v \bigg\rangle\) \(\big( a \big/ b\)

\[\Bigg( \sum_{i} a_i \Bigg)\]
\end{frame}
